refactor : 인터페이스 타입으로 사용하도록 수정